force-app/main/default/objects/Application_Question__c/Application_Question__c.object-meta.xml
<CustomObject>
    <label>Application Question</label>
    <nameField>
        <label>Application Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Question</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>