force-app/main/default/objects/Application_Question__c/fields/Answer_To_Rerender_On__c.field-meta.xml
<CustomField>
    <fullName>Answer_To_Rerender_On__c</fullName>
    <inlineHelpText>The value you wish to display the extra field based on.</inlineHelpText>
    <label>Answer To Rerender On</label>
    <length>255</length>
    <type>Text</type>
</CustomField>