force-app/main/default/objects/Application_Question__c/fields/Checkboxes_Options__c.field-meta.xml
<CustomField>
    <fullName>Checkboxes_Options__c</fullName>
    <label>Checkboxes Options</label>
    <type>TextArea</type>
</CustomField>