force-app/main/default/objects/Application_Question__c/fields/Child_Header_Question__c.field-meta.xml
<CustomField>
    <fullName>Child_Header_Question__c</fullName>
    <label>Child Header Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>