force-app/main/default/objects/Application_Question__c/fields/Field_From_Contact_Record__c.field-meta.xml
<CustomField>
    <fullName>Field_From_Contact_Record__c</fullName>
    <description>This is the API name of the field on the contact record you wish to pull the value from.</description>
    <inlineHelpText>This is the API name of the field on the contact record you wish to pull the value from.</inlineHelpText>
    <label>Field From Contact Record</label>
    <length>255</length>
    <type>Text</type>
</CustomField>