force-app/main/default/objects/Application_Question__c/fields/Field_to_Check_for_Rendering__c.field-meta.xml
<CustomField>
    <fullName>Field_to_Check_for_Rendering__c</fullName>
    <description>Please select which field you would like to be the controlling field, which will use the "Answer to rerender on" value to define if a field should display.</description>
    <inlineHelpText>Checkbox_Answer__c = Single Checkbox
Checkboxes_Answer__c = Checkboxes
Currency_Answer__c = Currency
Email_Answer__c = Email
Multi_Picklist_Answers__c = Multi-Select Picklist
Percent_Answer__c = Percent
Picklist_Answer__c = Single Picklist</inlineHelpText>
    <label>Field to Check for Rendering</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checkbox_Answer__c</fullName>
            </value>
            <value>
                <fullName>Checkboxes_Answer__c</fullName>
            </value>
            <value>
                <fullName>Currency_Answer__c</fullName>
            </value>
            <value>
                <fullName>Email_Answer__c</fullName>
            </value>
            <value>
                <fullName>Multi_Picklist_Answers__c</fullName>
            </value>
            <value>
                <fullName>Percent_Answer__c</fullName>
            </value>
            <value>
                <fullName>Picklist_Answer__c</fullName>
            </value>
            <value>
                <fullName>Short_Text_Answer__c</fullName>
            </value>
            <value>
                <fullName>Radio_Answer__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>