force-app/main/default/objects/Application_Question__c/fields/Field_to_Conditionally_Render__c.field-meta.xml
<CustomField>
    <fullName>Field_to_Conditionally_Render__c</fullName>
    <description>Select which field you would like to conditionally render based on answer.</description>
    <label>Field to Conditionally Render</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Short Text</fullName>
            </value>
            <value>
                <fullName>Long Text</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Single Picklist</fullName>
            </value>
            <value>
                <fullName>Multi-Select Picklist</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Checkboxes</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Radio Select</fullName>
            </value>
            <value>
                <fullName>Single Checkbox</fullName>
            </value>
            <value>
                <fullName>Attachment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>