force-app/main/default/objects/Application_Question__c/fields/Field_To_Set_On_Answer__c.field-meta.xml
<CustomField>
    <fullName>Field_To_Set_On_Answer__c</fullName>
    <label>Field To Set On Answer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Short_Text_Answer__c</fullName>
            </value>
            <value>
                <fullName>Checkbox_Answer__c</fullName>
            </value>
            <value>
                <fullName>Checkboxes_Answer__c</fullName>
            </value>
            <value>
                <fullName>Date_Answer__c</fullName>
            </value>
            <value>
                <fullName>Email_Answer__c</fullName>
            </value>
            <value>
                <fullName>Multi_Picklist_Answers__c</fullName>
            </value>
            <value>
                <fullName>Percent_Answer__c</fullName>
            </value>
            <value>
                <fullName>Picklist_Answer__c</fullName>
            </value>
            <value>
                <fullName>Text_Answer__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>