force-app/main/default/objects/Application_Question__c/fields/Has_Child_Of_Child__c.field-meta.xml
<CustomField>
    <fullName>Has_Child_Of_Child__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Child Of Child</label>
    <type>Checkbox</type>
</CustomField>