force-app/main/default/objects/Application_Question__c/fields/Is_Branching_Question__c.field-meta.xml
<CustomField>
    <fullName>Is_Branching_Question__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This should be checked if the question is a branching question and the template may need changing.</description>
    <inlineHelpText>This should be checked if the question is a branching question and the template may need changing.</inlineHelpText>
    <label>Is Branching Question</label>
    <type>Checkbox</type>
</CustomField>