force-app/main/default/objects/Application_Question__c/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>This field will be utilised to select which object we will be creating</description>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>