force-app/main/default/objects/Application_Question__c/fields/Page_Number_To_Display_On__c.field-meta.xml
<CustomField>
    <fullName>Page_Number_To_Display_On__c</fullName>
    <label>Page Number To Display On</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>