force-app/main/default/objects/Application_Question__c/fields/Pages_for_Add_Another__c.field-meta.xml
<CustomField>
    <fullName>Pages_for_Add_Another__c</fullName>
    <label>Pages for Add Another</label>
    <summarizedField>Child_Record_Question__c.Page_Number_To_Display_On__c</summarizedField>
    <summaryForeignKey>Child_Record_Question__c.Application_Question__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>