force-app/main/default/objects/Application_Question__c/fields/Picklist_Options__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Options__c</fullName>
    <label>Radio Select Options</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>