force-app/main/default/objects/Application_Question__c/fields/Question_Number__c.field-meta.xml
<CustomField>
    <fullName>Question_Number__c</fullName>
    <externalId>true</externalId>
    <label>Question ID</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>