force-app/main/default/objects/Application_Question__c/fields/Question_Qualifier__c.field-meta.xml
<CustomField>
    <fullName>Question_Qualifier__c</fullName>
    <description>Used in data conversion to distinguish between question with the same text</description>
    <inlineHelpText>Used in data conversion to distinguish between question with the same text</inlineHelpText>
    <label>Question Qualifier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>