force-app/main/default/objects/Application_Question__c/fields/Subtext__c.field-meta.xml
<CustomField>
    <fullName>Subtext__c</fullName>
    <label>Subtext</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>