force-app/main/default/objects/Application_Question__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Question_Number__c</columns>
    <columns>NAME</columns>
    <columns>Question__c</columns>
    <columns>Question_Type__c</columns>
    <columns>Field_From_Contact_Record__c</columns>
    <columns>Page_Number_To_Display_On__c</columns>
    <columns>Object_API_Name__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Field_To_Set_On_Answer__c</columns>
    <columns>Character_Word_Assistance__c</columns>
    <columns>Subtext__c</columns>
    <columns>Field_to_Conditionally_Render__c</columns>
    <columns>Has_Child_Of_Child__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>