force-app/main/default/objects/Application_Question__c/listViews/With_Helptext.listView-meta.xml
<ListView>
    <fullName>With_Helptext</fullName>
    <columns>Question_Number__c</columns>
    <columns>NAME</columns>
    <columns>Question_Type__c</columns>
    <columns>Question__c</columns>
    <columns>Help_Text__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>With Helptext</label>
</ListView>